samples/_failures_safe/1761075315_c78eda_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_decca48a.c: In function ‘main’:
./samples/SAFE/__tmp_decca48a.c:157:12: error: missing terminating " character
  157 |     printf("Enter start vertex for Dijkstra's algorithm
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_decca48a.c:157:5: error: expected expression at end of input
  157 |     printf("Enter start vertex for Dijkstra's algorithm
      |     ^~~~~~
./samples/SAFE/__tmp_decca48a.c:157:5: error: expected declaration or statement at end of input
